Fixes #4266: Immediate upload button broken in Opera 10 (OS X)
svn changeset:11639/svn branch:6.2

--- a/WebContent/VAADIN/themes/base/styles.css
+++ b/WebContent/VAADIN/themes/base/styles.css
@@ -1640,7 +1640,10 @@ div.v-tree-node-leaf {
 	right: 0;
 	height: 21px;
 	text-align: right;
+	border: none;
+	background: transparent;
 }
+
 .v-upload-immediate button {
 	position: relative;
 	left: 0;
