--- a/WebContent/VAADIN/themes/base/upload/upload.css
+++ b/WebContent/VAADIN/themes/base/upload/upload.css
@@ -12,7 +12,10 @@
 	right: 0;
 	height: 21px;
 	text-align: right;
+	border: none;
+	background: transparent;
 }
+
 .v-upload-immediate button {
 	position: relative;
 	left: 0;
